# ChangeLog for dev-java/jaxb
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Oct 2009; Martin von Gagern (MvG) <Martin.vGagern@gmx.net>
  +files/2.1.12-xjc-uses-jam.patch, +jaxb-2.1.12.ebuild:
  Version bump to 2.1.12

  21 Jan 2009; Martin von Gagern (MvG) <Martin.vGagern@gmx.net>
  jaxb-2.1.9.ebuild:
  Allow compilation on sun-jdk-1.6.

  12 Jan 2009; Martin von Gagern (MvG) <Martin.vGagern@gmx.net>
  jaxb-1.0.6-r1.ebuild, files/1.0.6-codemodel-2.1.patch:
  Work around codemodel bug, avoid depending on revbump.

  12 Jan 2009; Martin von Gagern (MvG) <Martin.vGagern@gmx.net>
  jaxb-2.1.9.ebuild:
  Avoid empty classpath argument.

*jaxb-2.1.9 (09 Jan 2009)

  09 Jan 2009; Martin von Gagern (MvG) <Martin.vGagern@gmx.net>
  +files/build.xml-1.0.6-r1, +jaxb-1.0.6-r1.ebuild,
  +files/1.0.6-resolver-1.2.patch, +files/1.0.6-codemodel-2.1.patch,
  +files/1.0.6-META-INF.patch, +jaxb-2.1.9.ebuild,
  +files/1.0.6-xsom-20060901.patch, +files/2.1.9-no-package-rename.patch:
  Version bump to 2.1.9.  New built process based on upstream workspace
  snapshot.  jaxb-tools now integrated in the jaxb ebuild, in order to stay
  closer to upstream build process and because packages depending on jaxb at
  runtime will likely require its tools at build time.  Jaxb 1.0.6 compiled
  from source as well, including tools, as jaxb2 needs a jaxb1 xjc in order
  to provide backwards compatibility.

  02 Jun 2008; Petteri Räty <betelgeuse@gentoo.org> jaxb-1.0.6.ebuild:
  Add ~x86 to dev-java/jaxb:1.

  02 Jun 2008; Serkan Kaba <serkan@gentoo.org> ++, ++, jaxb-2.1.4.ebuild:
  Add SLOT 1 for freemind.

  01 Sep 2007; Bernhard Frauendienst <gentoo@nospam.obeliks.de>
  +files/build.xml-2.1.4, +metadata.xml, +jaxb-2.1.4.ebuild:
  Initial commit to java-experimental overlay. Version bump to 2.1.4
