@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/jaxb
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*jaxb-2.2 (29 Jan 2010)
+
+  29 Jan 2010; Martin von Gagern (MvG) <Martin.vGagern@gmx.net>
+  +jaxb-2.2.ebuild:
+  version bump
 
   14 Oct 2009; Martin von Gagern (MvG) <Martin.vGagern@gmx.net>
   +files/2.1.12-xjc-uses-jam.patch, +jaxb-2.1.12.ebuild:
